# lab4

./: .gitignore  Asoortment.cpp  Asoortment.h  CMakeLists.txt  Client.cpp  Client.h  Employee.cpp  Employee.h  main.cpp
classes/: Asoortment.cpp  Asoortment.h  Client.cpp  Client.h  Employee.cpp  Employee.h  Jaz.cpp  Jaz.h  People.cpp  People.h  Rock.cpp  Rock.h
